# blank-slate

./: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.lovable/: plan.md
ardupilot-parser/: app.py
dji-parser/: Cargo.toml  Dockerfile  README.md  fly.toml  package.json
dji-parser/src/: main.rs  server.ts  types.ts
dji-parser/src/parser/: dji-txt.ts  fields.ts  index.ts  unzip.ts
docs/: AIP_ENR_5.1_forbuds_restriksjon_og_fareomrader.gdoc  dronelog-api-fields.md  dronelog-api-reference.md  dronelogapi_feltoversikt_sokbar.xlsx  sikkerhetsdokumentasjon.md
public/: sw-push.js
src/: App.tsx  index.css  main.tsx  sw.ts
src/components/: AddressAutocomplete.tsx  AdjacentAreaPanel.tsx  ArealbrukLegend.tsx  BefolkningLegend.tsx  CompanySwitcher.tsx  DeviationReportDialog.tsx  DomainGuard.tsx  DroneWeatherPanel.tsx  EditFlightLogDialog.tsx  ErrorBoundary.tsx  FlightHub2SendDialog.tsx  FlightLogbookDialog.tsx  ForceReloadBanner.tsx  GlassCard.tsx  Header.tsx  IdleTimeoutWarning.tsx  KeyboardDismissButton.tsx  LoadingSpinner.tsx  LocationPickerDialog.tsx  LogFlightTimeDialog.tsx  ManualMissionPicker.tsx  MapLayerControl.tsx  MfaChallengeDialog.tsx  OfflineBanner.tsx  OnlineIndicator.tsx  OpenAIPMap.tsx  PasskeyPromptDialog.tsx  PasskeySetup.tsx  PasswordRequirements.tsx  PendingApprovalsBadge.tsx  PendingDjiLogsSection.tsx  PlanRestricted.tsx  ProfileDialog.tsx  SearchablePersonSelect.tsx  SignatureDrawerDialog.tsx  SignaturePad.tsx  SoraSettingsPanel.tsx  StartFlightDialog.tsx  (+5 more)
supabase/: config.toml
(+702 files in other folders)
